--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@ input[type=submit] {
     flex-wrap: wrap;
     justify-content: space-around;
     text-align: right;
+    font-size: 15px;
 }
 textarea:hover{
     background-color: rgb(182, 165, 165);
